# shell

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: rust.yml
src/: TODO.md  builtin.rs  cmd.rs  command.rs  external.rs  history.rs  main.rs  shell.rs
tests/: integration_test.rs
